# ladder-legends-uploader

./: .gitignore  BUILD.md  CODE_SIGNING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOGIN_ITEMS.md  PLAYER_NAME_FILTERING.md  README.md  REPLAY_UPLOAD_IMPLEMENTATION.md  UPLOAD_SYSTEM_DESIGN.md  WINDOWS-CERT-README.md  build-release.sh  create-windows-cert-simple.ps1  create-windows-cert.ps1  export-cert.sh  generate-keys.sh  index.html  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.husky/: pre-commit  (+1 more)
src-tauri/: Cargo.toml  TESTING.md  check_replay_type.py  inspect_replay.py  parse_details.py  parse_initdata.py  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/python_modules/sc2reader/: __init__.py  objects.py  readers.py  resources.py  utils.py
src-tauri/python_modules/sc2reader/events/: game.py  tracker.py
src-tauri/src/: api_contracts.rs  config_utils.rs  debug_logger.rs  device_auth.rs  errors.rs  file_watcher.rs  lib.rs  main.rs  replay_parser.rs  replay_tracker.rs  replay_uploader.rs  sc2_detector.rs  test_harness.rs  types.rs  upload_manager.rs
src-tauri/src/api_contracts/: README.md
src-tauri/src/commands/: auth.rs  browser.rs  debug.rs  detection.rs  folders.rs  mod.rs  settings.rs  state_cmd.rs  tokens.rs  upload.rs  version.rs
src-tauri/src/services/: mod.rs  replay_scanner.rs  upload_executor.rs
src-tauri/src/state/: app_state.rs  manager.rs  mod.rs
src-tauri/test_replays/: 1v1-ladder.SC2Replay  practice-aim.SC2Replay
(+37 files in other folders)
