[package]
name = "ladder-legends-uploader"
version = "0.1.13"
description = "Automatically upload SC2 replays to Ladder Legends Academy"
authors = ["Ladder Legends"]
license = "MIT"
repository = "https://github.com/ladder-legends/ladder-legends-uploader"
edition = "2021"

[lib]
name = "ladder_legends_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }
open = "5.0"
sha2 = "0.10"
notify = "6.1"
nanoid = "0.4"
s2protocol = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sysinfo = "0.31"
chrono = "0.4"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"
